--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "mysql": "^2.15.0",
     "source-map-support": "^0.5.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "0.0.22",
+    "@types/mysql": "github:types/mysql",
     "@types/node": "^8.0.57",
     "serverless-webpack": "^4.0.0",
     "ts-loader": "^2.3.7",
