--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 service:
   name: typescript-trial-1
 
-# Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-plugin-tracing
 
 provider:
   name: aws
@@ -11,6 +11,14 @@ provider:
   stage: dev
   profile: slstest
   region: eu-west-1
+  tracing: true
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "xray:PutTraceSegments"
+        - "xray:PutTelemetryRecords"
+      Resource:
+        - "*"
 
 functions:
   hello:
