--- a/serverless.yml.dist
+++ b/serverless.yml.dist
@@ -39,4 +39,5 @@ functions:
         - xxxxxxxxxxxxxxxxxxxx
         - xxxxxxxxxxxxxxxxxxxx
         - xxxxxxxxxxxxxxxxxxxx
+    memorySize: 256
     timeout: 30 # optional, in seconds, default is 6, api gateway times out after 30 anyway
