--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "lib": [
-      "es5",
-      "es2015.promise"
-    ]
+    "lib": ["es2017"],
+    "target": "es2017"
   },
   "exclude": [
     "node_modules"
